# BattriKeepel2

./: .gitignore  README.md
BattriKeepel2/: ''  Assembly-CSharp-Editor.csproj  Assembly-CSharp.csproj
BattriKeepel2/Assets/: DefaultVolumeProfile.asset  UniversalRenderPipelineGlobalSettings.asset
BattriKeepel2/Assets/Editor/: HitboxDrawer.cs  MainMenu.cs  SO_BossLevelDataEditor.cs  SO_LevelDataEditor.cs
BattriKeepel2/Assets/Prefabs/: Bullet.prefab  FrogPrefab.prefab  Laser.prefab  SpecialBullet.prefab  UltimateBullet.prefab  Wall.prefab
BattriKeepel2/Assets/Resources/: PerformanceTestRunInfo.json
BattriKeepel2/Assets/Scenes/: IdleHatching.unity  MainMenu.unity  Movement.unity
BattriKeepel2/Assets/Scripts/Log/: Log.cs  (+1 more)
BattriKeepel2/Assets/Settings/: UniversalRP.asset
BattriKeepel2/Assets/Shaders/: Max.shadergraph  ToonLitSprite.shader
BattriKeepel2/ProjectSettings/: EditorBuildSettings.asset  GraphicsSettings.asset  NotificationsSettings.asset  ProjectSettings.asset  TagManager.asset
BattriKeepel2_c/: CMakeLists.txt
BattriKeepel2_c/.cache/clangd/index/: ByteFlag.c.D1558077ABFC7822.idx  ByteFlag.h.A9C309964FA4366F.idx  Core.h.BE62F0C6E8F27F6B.idx  ECS.c.EDD486E451E89284.idx  ECS.h.B69BB3D07022378F.idx  ECSSystems.c.2536BC2EBAF0477B.idx  ECSSystems.h.32A478C506A16DFF.idx  List.c.3E6B128B03F511C8.idx  List.h.B993751AC09FD01C.idx  main.c.31F43C92926E1B68.idx  main.c.92049EA4D6E3A782.idx  main.h.08C91BF1A0CA4D96.idx  main.h.D8E5389577877676.idx
BattriKeepel2_c/src/: ByteFlag.c  ByteFlag.h  Core.h  ECS.c  ECS.h  ECSSystems.c  ECSSystems.h  List.c  List.h
(+372 files in other folders)
